# RobotSimulation

./: .gitignore  README.md
Documentation/: Demo Documentatie.tex  Ontwerp Documentatie.tex
Documentation/Afbeeldingen/: robot_sim_plantuml
Documentation/plantuml/: robot_sim_plantuml.txt
src/al5d_simulation/: CMakeLists.txt  package.xml
src/al5d_simulation/include/: DegreeOfFreedom.hpp  RobotSimulation.hpp  SSC32UCommand.hpp  StatePublisher.h  StatePublisher.hpp
src/al5d_simulation/launch/: al5d.rviz  al5d_simulation.launch
src/al5d_simulation/scripts/: demo.bash
src/al5d_simulation/src/: main.cpp
src/al5d_simulation/src/RobotSimulation/: DegreeOfFreedom.cpp  RobotSimulation.cpp  SSC32UCommandParser.cpp  StatePublisher.cpp
src/al5d_simulation/urdf/: al5d.gazebo  al5d.urdf  al5d.xacro
src/cup/: CMakeLists.txt  package.xml
src/cup/include/cup/: attribute.h  cup.h  cup.hpp  distance_sensor.h  measure_attribute.h  orientation.h  robot.h  robot.hpp  sensor.h  speed.h  touch_sensor.h  transform_manager.h  transformable.h  velocity.h  world.h  world.hpp
src/cup/src/: cup.cpp  distance_sensor.cpp  main.cpp  orientation.cpp  robot.cpp  sensor.cpp  speed.cpp  touch_sensor.cpp  transformable.cpp  velocity.cpp  world.cpp
